objects/Applicantnationality__c.object
<CustomObject>
    <label>IBPS Registration form</label>
    <nameField>
        <label>Applicant Nataionality</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IBPS Registration forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ID_Prof__c</fullName>
        <label>ID Prof</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aadhar</fullName>
                </value>
                <value>
                    <fullName>Pan</fullName>
                </value>
                <value>
                    <fullName>Driving License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Fee__c</fullName>
        <label>Applicant Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Address__c</fullName>
        <label>Applicant Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Mail_id__c</fullName>
        <label>Applicant Mail id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Physical_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Percentage__c</fullName>
        <label>Academic Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applicant_Father_name__c</fullName>
        <label>Applicant Father name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Phone_number__c</fullName>
        <label>Applicant Phone number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
</CustomObject>